feat: 增加了一些自己的理解

--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   },
   "dependencies": {
     "@vue/reactivity": "^3.0.5",
+    "jest": "^29.6.1",
     "pixi.js": "^6.2.0"
-  }
+  },
+  "type": "module"
 }
